# skipbot-rust

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migration/: Cargo.toml
migration/src/: lib.rs  quotes.rs
migrations/2023-05-04-013359_create_quotes/: up.sql
src/: handler.rs  main.rs  register.rs
src/commands/: ping.rs
src/db/: mod.rs  models.rs  schema.rs
src/db/entity/: mod.rs  prelude.rs  quotes.rs
src/events/: ready.rs
src/modules/: mod.rs  types.rs
src/modules/development/: mod.rs  register.rs
src/modules/development/commands/: github.rs  mod.rs  ping.rs
src/modules/quotes/: mod.rs  queries.rs
src/modules/quotes/commands/: mod.rs  quote.rs
