[package]
name = "skipbot-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "migration"]

[dependencies]
chrono = "0.4.24"
colored = "2.0.0"
dotenv = "0.15.0"
fern = { version = "0.6.2", features = ["colored"] }
humantime = "2.1.0"
log = "0.4.17"
poise = "0.5.2"
sea-orm = { version = "0.11.3", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.27.0", features = ["rt-multi-thread", "process"] }
migration = { path = "migration" }